# web-scrapper

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
test/: CMakeLists.txt  RetrieverTest.cpp
